--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Install dependencies
       run: bundle install
     - name: Run tests
-      run: bundle exec rspec ./rspec
+      run: rspec ./spec
