--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -24,6 +24,15 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7.1
+    - name: Add dependency
+      run: apt-get update && \
+           apt-get install -y --no-install-recommends \
+           gcc \
+           build-essential \
+           libmagickwand-dev \
+           unzip && \
+           apt-get clean && \
+           rm -rf /var/lib/apt/lists/*
     - name: Install dependencies
       run: bundle install
     - name: Run tests
