--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,14 +25,14 @@ jobs:
       with:
         ruby-version: 2.7.1
     - name: Add dependency
-      run: sudo apt-get update && \
-           sudo apt-get install -y --no-install-recommends \
+      run: apt-get update && \
+           apt-get install -y --no-install-recommends \
            gcc \
            build-essential \
            libmagickwand-dev \
            unzip && \
-           sudo apt-get clean && \
-           sudo rm -rf /var/lib/apt/lists/*
+           apt-get clean && \
+           rm -rf /var/lib/apt/lists/*
     - name: Install dependencies
       run: bundle install
     - name: Run tests
