--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,8 +25,8 @@ jobs:
       with:
         ruby-version: 2.7.1
     - name: Add dependency
-      run: apt-get update && \
-           apt-get install -y --no-install-recommends \
+      run: sudo apt-get update && \
+           sudo apt-get install -y --no-install-recommends \
            gcc \
            build-essential \
            libmagickwand-dev \
