--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,14 +19,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7.1
+    - name: Add sudo
+      run: apt update && apt install sudo
     - name: Add dependency
-      run: sudo apt-get update && \
-           sudo apt-get install -y --no-install-recommends \
+      run: apt-get update && \
+           apt-get install -y --no-install-recommends \
            gcc \
            build-essential \
            libmagickwand-dev \
