--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -17,14 +17,14 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
-
+    shell: bash
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7.1
-    - name: Add sudo
+    - name: Install sudo package
       run: apt update && apt install sudo
     - name: Add dependency
       run: apt-get update && \
